pequeños cambios a footer e information

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 		    	<button id="becomeButtonId">Become a driver</button>
 		    	<a href="#">Sign up to ride</a>
 	    	</div>
-	    	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem.</p>
-	    	<p>L dolor mollitia tenetur et ullam nulla ducimus</p>
+	    	<p>Already applied? Check the status of your application<a href="#">here</a></p>
+	    	<p>Earn money for inviting friends to drive. <a href="#">Learn more</a></p>
 	    </div>
 	</section>
 	<section id="information" class="flex-container information">
@@ -70,18 +70,18 @@
 		</div>
 		<div class="textVideos">
 			<h6>Watch</h6>
-			<h2>AMPLIFY YOUR RIDE</h2>
+			<h2>JUNE</h2>
 			<p>
-				Lyft's new emplem, Amp, is the secret to smooth pickups. Lighting uo dashboards nationwide, the device makes it easy for passengers and drivers to find each other.
+				In an animated short film by Academy Award-winner John Kahrs, a lonely widow in historic South Chicago is empowered to start sharing the ride - and sharing her life, too.
 			</p>
 		</div>
 	</section>
 	<section class="flex-container videos">
 		<div class="textVideos">
 			<h6>Watch</h6>
-			<h2>AMPLIFY YOUR RIDE</h2>
+			<h2>A GOOD THING GOING</h2>
 			<p>
-				Lyft's new emplem, Amp, is the secret to smooth pickups. Lighting uo dashboards nationwide, the device makes it easy for passengers and drivers to find each other.
+				Launching on TV and online, "Ride on the Bright Side" shows how Lyft continues to prioritize happy drivers, short ETAs, and safety.
 			</p>
 		</div>
 		<div class="tube">
