arreglos en el nav, se deja el espacio después de log in

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 		<a href="#" class="text-uppercase link">Explore</a>
 		<a href="#" class="text-uppercase link">Help</a>
 		<button id="botonLogin">Log in</button>
+		<div id="espacioId"></div>
 		<button id="botonSignup">Sign up</button>
 	</nav>
 	<section id="home" class="flex-container">
